--- a/.chainlit/config.toml
+++ b/.chainlit/config.toml
@@ -1,7 +1,8 @@
+# Fichier: .chainlit/config.toml
+
 [project]
 # Whether to enable telemetry (default: true). No personal data is collected.
 enable_telemetry = true
-
 
 # List of environment variables to be provided by each user to use the app.
 user_env = []
@@ -9,86 +10,97 @@ user_env = []
 # Duration (in seconds) during which the session is saved when the connection is lost
 session_timeout = 3600
 
-# Duration (in seconds) of the user session expiry
-user_session_timeout = 1296000  # 15 days
-
 # Enable third parties caching (e.g LangChain cache)
 cache = false
 
 # Authorized origins
 allow_origins = ["*"]
 
+# Follow symlink for asset mount (see https://github.com/Chainlit/chainlit/issues/317)
+# follow_symlink = false
+
 [features]
-# Process and display HTML in messages. This can be a security risk (see https://stackoverflow.com/questions/19603097/why-is-it-dangerous-to-render-user-generated-html-or-javascript)
+# Show the prompt playground
+prompt_playground = true
+
+# Process and display HTML in messages. This can be a security risk (see https://github.com/Chainlit/chainlit/issues/441)
 unsafe_allow_html = false
 
 # Process and display mathematical expressions. This can clash with "$" characters in messages.
 latex = false
 
-# Autoscroll new user messages at the top of the window
-user_message_autoscroll = true
-
-# Automatically tag threads with the current chat profile (if a chat profile is used)
+# Automatically tag threads when a user starts a new chat session.
 auto_tag_thread = true
 
-# Allow users to edit their own messages
-edit_message = true
+# Authorize users to upload files with messages
+multi_modal = true
 
-# Authorize users to spontaneously upload files with messages
-[features.spontaneous_file_upload]
-    enabled = true
-    # Define accepted file types using MIME types
-    # Examples:
-    # 1. For specific file types:
-    #    accept = ["image/jpeg", "image/png", "application/pdf"]
-    # 2. For all files of certain type:
-    #    accept = ["image/*", "audio/*", "video/*"]
-    # 3. For specific file extensions:
-    #    accept = { "application/octet-stream" = [".xyz", ".pdb"] }
-    # Note: Using "*/*" is not recommended as it may cause browser warnings
-    accept = ["*/*"]
-    max_files = 20
-    max_size_mb = 500
-
-[features.audio]
-    # Sample rate of the audio
-    sample_rate = 24000
+# Allows user to use speech to text
+[features.speech_to_text]
+    enabled = false
+    # See all languages here https://github.com/JamesBrill/react-speech-kit#language-support
+    # language = "en-US"
 
 [UI]
-# Name of the assistant.
-name = "Assistant"
+# Name of the app and chatbot.
+name = "TERANGA IA - ANSD"
 
-# default_theme = "dark"
+# Show the readme while the conversation is empty.
+show_readme_as_default = true
 
-# layout = "wide"
+# Description of the app and chatbot. This is used for HTML tags.
+description = "Assistant Intelligent pour les Statistiques du Sénégal - ANSD (Agence Nationale de la Statistique et de la Démographie)"
 
-# Description of the assistant. This is used for HTML tags.
-# description = ""
+# Large size content are by default collapsed for a cleaner ui
+default_collapse_content = true
 
-# Chain of Thought (CoT) display mode. Can be "hidden", "tool_call" or "full".
-cot = "full"
+# The default value for the expand messages settings.
+default_expand_messages = false
+
+# Hide the chain of thought details from the user in the UI.
+hide_cot = false
+
+# Link to your github repo. This will add a github button in the UI's header.
+# github = "https://github.com/your-repo"
 
 # Specify a CSS file that can be used to customize the user interface.
 # The CSS file can be served from the public directory or via an external link.
-# custom_css = "/public/test.css"
+custom_css = "/public/style.css"
 
 # Specify a Javascript file that can be used to customize the user interface.
 # The Javascript file can be served from the public directory.
-# custom_js = "/public/test.js"
+# custom_js = "/public/script.js"
 
-# Specify a custom meta image url.
-# custom_meta_image_url = "https://chainlit-cloud.s3.eu-west-3.amazonaws.com/logo/chainlit_banner.png"
+# Specify a custom font url.
+# custom_font = "https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
 
-# Specify a custom build directory for the frontend.
-# This can be used to customize the frontend code.
-# Be careful: If this is a relative path, it should not start with a slash.
+# Specify a custom build directory for the UI. This is used to serve the UI from a different location.
 # custom_build = "./public/build"
 
-# Specify optional one or more custom links in the header.
-# [[UI.header_links]]
-#     name = "Issues"
-#     icon_url = "https://avatars.githubusercontent.com/u/128686189?s=200&v=4"
-#     url = "https://github.com/Chainlit/chainlit/issues"
+# Override default MUI light theme. (Check theme.ts)
+[UI.theme]
+    default = "dark"
+    #layout = "wide"
+    # Override the default font family.
+    font_family = "Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, sans-serif"
+
+[UI.theme.light]
+    #background = "#FAFAFA"
+    #paper = "#FFFFFF"
+
+    [UI.theme.light.primary]
+        #main = "#F80061"
+        #dark = "#980039"
+        #light = "#FFE7EB"
+
+[UI.theme.dark]
+    background = "#162CF8"
+    paper = "rgba(255, 255, 255, 0.1)"
+
+    [UI.theme.dark.primary]
+        main = "#F63D15"
+        dark = "#E2A31B"
+        light = "#1a2ef5"
 
 [meta]
-generated_by = "2.4.201"
+generated_by = "1.0.200"
